# cpp_torch_mnist

./: CMakeLists.txt  README.md
